--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Name of your Web-side</title>
+    <link rel="shortcut icon" href="Images/6.png" type="image/x-icon">
+    <title>Hockeys Club</title>
     <!-- Tailwind and daisyUI config section -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -89,9 +90,9 @@
         </nav>
     </header>
 
-    <main >
+    <main class="container mx-auto">
         <!-- carousel section -->
-        <section class="container mx-auto my-10">
+    <section class="mb-8 lg:my-10">
             <div class="carousel relative w-full lg:h-[550px]">
                 <div id="slide1" class="carousel-item relative w-full">
                   <img src="Images/1.png" class="w-full" />
@@ -131,7 +132,48 @@
                 <p class="max-w-[502px] text-base font-medium ">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
     </section>  
-          
+    <div class="divider"></div>
+    <!-- Professional Hockeys Club -->
+    <section>
+        <div class="text-center space-y-2 lg:space-y-6">
+            <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Professional Hockeys Club</h1>
+            <p class="max-w-[607px] mx-auto text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+        <div class="divider my-4 lg:my-12 "></div>
+        <!-- card section -->
+        <div class=" lg:flex justify-between px-16">
+            <div class="card">
+                <div class="radial-progress mx-auto h-28 w-28 text-red-600" style="--value:87;" role="progressbar">87%</div>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title">Prayer Facility</h2>
+                  <p class="max-w-[250px]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+              </div>
+            <div class="card">
+                <div class="radial-progress mx-auto h-28 w-28 text-green-600" style="--value:95;" role="progressbar">95%</div>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title">Prayer Facility</h2>
+                  <p class="max-w-[250px]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+              </div>
+            <div class="card">
+                <div class="radial-progress mx-auto h-28 w-28 text-[#FFB546]" style="--value:90;" role="progressbar">90%</div>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title">Prayer Facility</h2>
+                  <p class="max-w-[250px]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+              </div>
+            <div class="card">
+                <div class="radial-progress mx-auto h-28 w-28 text-[#4c8df1]" style="--value:80;" role="progressbar">80%</div>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title">Prayer Facility</h2>
+                  <p class="max-w-[250px]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                </div>
+              </div>
+        </div>
+    </section>
+    <div class="divider my-4 lg:my-12 "></div>
+    <!--  -->
     </main>
 
     <footer>
