Get In Touch section done

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <div class="divider my-4 lg:my-12 "></div>
     <!-- Our New Products -->
     <section>
-      <div class="">
+      <div class="lg:pb-24 pb-4">
         <div class="text-center space-y-2 lg:space-y-6">
           <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Our New Products</h1>
           <p class="max-w-[607px] mx-auto text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing
@@ -377,6 +377,139 @@
             </div>
           </div>
           
+        </div>
+      </div>
+    </section>
+    <!-- Clients Question -->
+    <div class="divider my-4 lg:my-12 "></div>
+    <section>
+      <div class="text-center space-y-2 lg:space-y-6">
+        <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Clients Question</h1>
+        <p class="max-w-[607px] mx-auto text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing
+          aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      </div>
+      <div class="divider my-4 lg:my-12 "></div>
+      <!-- accordion section -->
+      <div class="lg:flex gap-10 border-2 rounded-lg lg:mb-24 mb-4 lg:p-10 p-6">
+        <div class="my-auto">
+          <img src="Images/11.png" class="w-full flex-1" alt="">
+        </div>
+        <div class="flex-1 space-y-2">
+          <div class="collapse collapse-plus ">
+            <input type="radio" name="my-accordion-3" checked="checked" /> 
+            <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
+              Our Equipment
+            </div>
+            <div class="collapse-content  text-sm"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="collapse collapse-plus ">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
+              Hockey Training
+            </div>
+            <div class="collapse-content text-sm"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="collapse collapse-plus ">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
+              Private Lessons
+            </div>
+            <div class="collapse-content text-sm"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="collapse collapse-plus ">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
+              Ski Touring
+            </div>
+            <div class="collapse-content text-sm"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="collapse collapse-plus ">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
+              Booking
+            </div>
+            <div class="collapse-content text-sm"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="collapse collapse-plus ">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
+              Pricings
+            </div>
+            <div class="collapse-content text-sm"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="divider my-4 lg:my-12 "></div>
+    <!-- Get In Touch -->
+    <section>
+      <div class="text-center space-y-2 lg:space-y-6">
+        <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Get In Touch</h1>
+        <p class="max-w-[607px] mx-auto text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.  </p>
+      </div>
+      <div class="divider my-4 lg:my-12 "></div>
+      <!-- contact section -->
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-12 m-4">
+        <div class=" lg:p-12 p-6 p border-2 rounded-xl flex flex-col gap-5">
+          <div class="bg-[#f9fef1] px-8 lg:py-10 py-6 rounded-xl ">
+            <img src="Images/Group 1171275317.png" alt="">
+            <p class="mt-8 opacity-70">Phone Number :</p>
+            <p class="font-bold text-base lg:text-lg">(+62) 123-321-543</p>
+          </div>
+          <div class="bg-[#fffcef] px-8 lg:py-10 py-6 rounded-xl ">
+            <img src="Images/Group 1171275318.png" alt="">
+            <p class="mt-8 opacity-70">Email : </p>
+            <p class="font-bold text-base lg:text-lg">hockeys@support.com</p>
+          </div>
+          <div class="bg-[#f0f6fe] px-8 lg:py-10 py-6 rounded-xl ">
+            <img src="Images/Group 1171275321.png" alt="">
+            <p class="mt-8 opacity-70">Location : </p>
+            <p class="font-bold text-base lg:text-lg">152/1 Mohakhali Wireless Gate</p>
+          </div>
+        </div>
+        <div class="lg:col-span-2 space-y-6">
+          <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 ">
+            <div class="">
+              <h1 class="text-lg font-bold pb-2">Your Name</h1>
+              <input type="text" placeholder="Enter your full name" class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
+            </div>
+            <div class="">
+              <h1 class="text-lg font-bold pb-2">Your Email</h1>
+              <input type="text" placeholder="Enter your email" class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
+            </div>
+            <div class="">
+              <h1 class="text-lg font-bold pb-2">Subject</h1>
+              <input type="text" placeholder="Enter your subject" class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
+            </div>
+            <div class="">
+              <h1 class="text-lg font-bold pb-2">Phone Number</h1>
+              <input type="text" placeholder="EntEnter your phone number" class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
+            </div>
+          </div>
+          <div class="">
+            <div class="">
+              <h1 class="text-lg font-bold pb-2">Message</h1>
+              <textarea placeholder="Write your message" class="placeholder:opacity-50 textarea textarea-bordered textarea-lg w-full h-[200px] lg:h-[430px]" ></textarea>
+              <button class="btn w-full bg-primary-color btn-md lg:btn-lg text-white">Send Message</button>
+            </div>
+          </div>
         </div>
       </div>
     </section>
