footer section is done

--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
-                <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free</div>
+                <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
+                </div>
               </div>
             </div>
           </div>
@@ -288,7 +289,8 @@
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
-                <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free</div>
+                <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
+                </div>
               </div>
             </div>
           </div>
@@ -309,7 +311,8 @@
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
-                <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free</div>
+                <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
+                </div>
               </div>
             </div>
           </div>
@@ -330,7 +333,8 @@
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
-                <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free</div>
+                <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
+                </div>
               </div>
             </div>
           </div>
@@ -351,7 +355,8 @@
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
-                <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free</div>
+                <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
+                </div>
               </div>
             </div>
           </div>
@@ -372,11 +377,12 @@
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
-                <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free</div>
+                <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
+                </div>
               </div>
             </div>
           </div>
-          
+
         </div>
       </div>
     </section>
@@ -396,61 +402,61 @@
         </div>
         <div class="flex-1 space-y-2">
           <div class="collapse collapse-plus ">
-            <input type="radio" name="my-accordion-3" checked="checked" /> 
+            <input type="radio" name="my-accordion-3" checked="checked" />
             <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
               Our Equipment
             </div>
-            <div class="collapse-content  text-sm"> 
+            <div class="collapse-content  text-sm">
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
             </div>
           </div>
           <hr>
           <div class="collapse collapse-plus ">
-            <input type="radio" name="my-accordion-3" /> 
+            <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
               Hockey Training
             </div>
-            <div class="collapse-content text-sm"> 
+            <div class="collapse-content text-sm">
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
             </div>
           </div>
           <hr>
           <div class="collapse collapse-plus ">
-            <input type="radio" name="my-accordion-3" /> 
+            <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
               Private Lessons
             </div>
-            <div class="collapse-content text-sm"> 
+            <div class="collapse-content text-sm">
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
             </div>
           </div>
           <hr>
           <div class="collapse collapse-plus ">
-            <input type="radio" name="my-accordion-3" /> 
+            <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
               Ski Touring
             </div>
-            <div class="collapse-content text-sm"> 
+            <div class="collapse-content text-sm">
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
             </div>
           </div>
           <hr>
           <div class="collapse collapse-plus ">
-            <input type="radio" name="my-accordion-3" /> 
+            <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
               Booking
             </div>
-            <div class="collapse-content text-sm"> 
+            <div class="collapse-content text-sm">
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
             </div>
           </div>
           <hr>
           <div class="collapse collapse-plus ">
-            <input type="radio" name="my-accordion-3" /> 
+            <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
               Pricings
             </div>
-            <div class="collapse-content text-sm"> 
+            <div class="collapse-content text-sm">
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
             </div>
           </div>
@@ -462,7 +468,8 @@
     <section>
       <div class="text-center space-y-2 lg:space-y-6">
         <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Get In Touch</h1>
-        <p class="max-w-[607px] mx-auto text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.  </p>
+        <p class="max-w-[607px] mx-auto text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing
+          aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
       </div>
       <div class="divider my-4 lg:my-12 "></div>
       <!-- contact section -->
@@ -488,35 +495,87 @@
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 ">
             <div class="">
               <h1 class="text-lg font-bold pb-2">Your Name</h1>
-              <input type="text" placeholder="Enter your full name" class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
+              <input type="text" placeholder="Enter your full name"
+                class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
             </div>
             <div class="">
               <h1 class="text-lg font-bold pb-2">Your Email</h1>
-              <input type="text" placeholder="Enter your email" class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
+              <input type="text" placeholder="Enter your email"
+                class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
             </div>
             <div class="">
               <h1 class="text-lg font-bold pb-2">Subject</h1>
-              <input type="text" placeholder="Enter your subject" class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
+              <input type="text" placeholder="Enter your subject"
+                class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
             </div>
             <div class="">
               <h1 class="text-lg font-bold pb-2">Phone Number</h1>
-              <input type="text" placeholder="EntEnter your phone number" class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
+              <input type="text" placeholder="EntEnter your phone number"
+                class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
             </div>
           </div>
           <div class="">
             <div class="">
               <h1 class="text-lg font-bold pb-2">Message</h1>
-              <textarea placeholder="Write your message" class="placeholder:opacity-50 textarea textarea-bordered textarea-lg w-full h-[200px] lg:h-[430px]" ></textarea>
+              <textarea placeholder="Write your message"
+                class="placeholder:opacity-50 textarea textarea-bordered textarea-lg w-full h-[200px] lg:h-[430px]"></textarea>
               <button class="btn w-full bg-primary-color btn-md lg:btn-lg text-white">Send Message</button>
             </div>
           </div>
         </div>
       </div>
     </section>
-    
+    <!-- Social Media  -->
+    <section class="flex flex-col items-center mb-24 space-y-6 bg-[#f8f8f8] p-9 rounded-xl m-3">
+      <h1 class="text-2xl font-extrabold">Social Media</h1>
+      <div class="flex gap-4 ">
+        <i class="fa-brands fa-twitter text-3xl"></i>
+        <i class="fa-brands fa-facebook text-3xl"></i>
+        <i class="fa-brands fa-instagram text-3xl"></i>
+        <i class="fa-brands fa-github text-3xl"></i>
+      </div>
+    </section>
   </main>
 
-  <footer>
+  <footer class=" bg-black text-white">
+    <div class="py-10 lg:py-24  container mx-auto grid grid-cols-2 lg:grid-cols-5 gap-10 justify-between">
+      <div class=" col-span-2 mx-auto lg:mx-0 space-y-4 max-w-[346px] flex flex-col items-center lg:items-start">
+        <h1 class="text-xl lg:text-3xl font-bold lg:font-extrabold ">Get In Touch</h1>
+        <p class="opacity-60 mb-7 text-center lg:text-left">Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat dolor. Purus urna
+          in sit nullam proin. </p>
+        <div class=" flex gap-3">
+          <img src="Images/Frame (3).png" alt="">
+          <p class="opacity-60">hockeys@support.com</p>
+        </div>
+        <div class="flex gap-3">
+          <img src="Images/Frame (4).png" alt="">
+          <p class="opacity-60">(+62) 123-321-543</p>
+        </div>
+      </div>
+      <div class="max-w-[110px] mx-auto lg:mx-0 flex flex-col gap-3 items-center lg:items-start">
+        <header class="font-bold mb-7">Company</header>
+        <a class="opacity-60">About us</a>
+        <a class="opacity-60">Leadership</a>
+        <a class="opacity-60">Careers</a>
+        <a class="opacity-60">News & Article</a>
+        <a class="opacity-60">Legal Notice</a>
+      </div>
+      <div class="max-w-[115px] mx-auto lg:mx-0 flex flex-col gap-3 items-center lg:items-start">
+        <header class="mb-7 font-bold">Support</header>
+        <a class="opacity-60">Help Center</a>
+        <a class="opacity-60">FAQ</a>
+        <a class="opacity-60">Ticket Support</a>
+        <a class="opacity-60">Contact Us</a>
+      </div>
+      <div class="flex flex-col gap-3 mx-auto lg:mx-0 items-center lg:items-start col-span-2 lg:col-span-1">
+        <header class="mb-7 font-bold">Services</header>
+        <a class="opacity-60">Academy</a>
+        <a class="opacity-60">Group Lesson</a>
+        <a class="opacity-60">Private Lesson</a>
+        <a class="opacity-60">Hockeys for kids</a>
+        <a class="opacity-60">Hockeys for Adult</a>
+      </div>
+    </div>
   </footer>
 </body>
 
