--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </style>
 </head>
 
-<body class="Manrope">
+<body class="Manrope mx-4 lg:mx-0">
   <header class="container mx-auto lg:my-14">
 
     <nav>
@@ -68,7 +68,7 @@
             </ul>
           </div>
           <div class="flex">
-            <a class="btn btn-ghost md:text-4xl pl-0 text-sm font-extrabold">Hockey<span
+            <a class="btn btn-ghost md:text-4xl pl-0 text-2xl font-extrabold">Hockey<span
                 class="text-primary-color">’</span>s</a>
           </div>
         </div>
@@ -83,7 +83,7 @@
         </div>
         <div class="navbar-end flex gap-6">
           <i class="hidden lg:block fa-solid fa-magnifying-glass text-slate-400"></i>
-          <a class="btn btn-sm lg:btn-md  bg-primary-color text-white md:font-semibold">Get Ticket</a>
+          <a class="btn btn-sm lg:btn-lg btn-md bg-primary-color text-white md:font-semibold">Get Ticket</a>
         </div>
       </div>
     </nav>
@@ -92,7 +92,7 @@
   <main class="container mx-auto">
     <!-- carousel section -->
     <section class="mb-8 lg:my-10 relative ">
-      <div class="carousel relative w-full lg:h-[600px] ">
+      <div class="carousel relative w-full lg:h-[650px] ">
         <div id="slide1" class="carousel-item relative w-full ">
           <img src="Images/1.png" class="w-full" />
           <div class="absolute flex gap-4 bottom-5 left-5">
@@ -123,10 +123,10 @@
         </div>
 
       </div>
-      <div class=" lg:absolute bg-black text-white p-8 rounded-lg space-y-4 lg:right-8 lg:bottom-8 ">
-        <h1 class="text-2xl font-extrabold opacity-80">Meet all the heroes from the field</h1>
-        <p class="max-w-[502px] text-base font-medium opacity-60">Dit amet consectetur. Condimentum dignissim adipiscing
-          aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      <div class=" lg:absolute bg-black text-white px-3 py-4 lg:p-8 rounded-lg space-y-4 lg:right-8 lg:bottom-8 ">
+        <h1 class="text-xl lg:text-2xl font-extrabold opacity-80">Meet all the heroes from the field</h1>
+        <p class="max-w-[502px] text-base font-medium opacity-60">
+          In the field, heroes unite, driven by purpose, courage, and unwavering determination to conquer challenges together. </p>
       </div>
 
     </section>
@@ -135,8 +135,7 @@
     <section>
       <div class="text-center space-y-2 lg:space-y-6">
         <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Professional Hockeys Club</h1>
-        <p class="max-w-[607px] mx-auto text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing
-          aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        <p class="max-w-[607px] mx-auto text-sm lg:text-base">The professional hockey club displayed unparalleled teamwork, securing victory with skill and determination on the ice.</p>
       </div>
       <div class="divider my-4 lg:my-12 "></div>
       <!-- card section -->
@@ -146,31 +145,31 @@
             role="progressbar">87%</div>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Prayer Facility</h2>
-            <p class="max-w-[250px]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <p class="max-w-[250px]">Expert coach guides individuals, unlocking potential for peak performance and personal growth with precision and empathy.</p>
           </div>
         </div>
         <div class="card">
           <div class="radial-progress mx-auto h-28 w-28 text-green-600" style="--value:95;--thickness: 12px;"
             role="progressbar">95%</div>
           <div class="card-body items-center text-center">
-            <h2 class="card-title">Prayer Facility</h2>
-            <p class="max-w-[250px]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <h2 class="card-title">Experienced Coach</h2>
+            <p class="max-w-[250px]">An experienced senior player, showcasing wisdom and skill, leads the team with finesse and expertise.</p>
           </div>
         </div>
         <div class="card">
           <div class="radial-progress mx-auto h-28 w-28 text-[#FFB546]" style="--value:90;--thickness: 12px;"
             role="progressbar">90%</div>
           <div class="card-body items-center text-center">
-            <h2 class="card-title">Prayer Facility</h2>
-            <p class="max-w-[250px]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <h2 class="card-title">Senior Player</h2>
+            <p class="max-w-[250px]">Experienced senior player, showcasing mastery with finesse, leadership, and a wealth of game knowledge.</p>
           </div>
         </div>
         <div class="card">
           <div class="radial-progress mx-auto h-28 w-28 text-[#4c8df1]" style="--value:80;--thickness: 12px;"
             role="progressbar">80%</div>
           <div class="card-body items-center text-center">
-            <h2 class="card-title">Prayer Facility</h2>
-            <p class="max-w-[250px]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <h2 class="card-title">Training Ground</h2>
+            <p class="max-w-[250px]">In the training ground, warriors honed skills, mastering every move for the impending battle ahead.</p>
           </div>
         </div>
       </div>
@@ -180,8 +179,7 @@
     <section class="my:4 lg:my-24">
       <div class="text-center space-y-2 lg:space-y-6">
         <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Program Sections</h1>
-        <p class="max-w-[607px] mx-auto text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing
-          aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        <p class="max-w-[607px] mx-auto text-sm lg:text-base">Divide code into sections for clarity, enhancing readability and easing maintenance. </p>
       </div>
       <div class="divider my-4 lg:my-12 "></div>
       <!-- program card -->
@@ -192,9 +190,7 @@
             <div class="hero-content text-center text-neutral-content ">
               <div class="text-left pt-4 lg:pt-24 px-2 lg:px-10 space-y-5 lg:pb-12 text-white">
                 <h1 class="mb-5 text-xl lg:text-3xl font-bold">Junior Program</h1>
-                <p class="mb-5 text-sm lg:text-base">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
-                  enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et
-                  in.</p>
+                <p class="mb-5 text-sm lg:text-base">Developing coding skills? Join our junior program for a fun, interactive introduction to programming concepts.</p>
                 <button
                   class="btn lg:btn-md btn-sm bg-primary-color border-none text-white  lg:text-xl font-bold">Register
                   Now</button>
@@ -208,9 +204,7 @@
             <div class="hero-content text-center text-neutral-content ">
               <div class="text-left pt-4 lg:pt-24 px-2 lg:px-10 space-y-5 lg:pb-12 text-white">
                 <h1 class="mb-5 text-xl lg:text-3xl font-bold">Teenager Program</h1>
-                <p class="mb-5 text-sm lg:text-base">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
-                  enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et
-                  in.</p>
+                <p class="mb-5 text-sm lg:text-base">Creating a dynamic teen program that fosters growth, connection, and learning for adolescents is essential.</p>
                 <button
                   class="btn lg:btn-md btn-sm bg-primary-color border-none text-white  lg:text-xl font-bold">Register
                   Now</button>
@@ -219,16 +213,13 @@
           </div>
         </div>
         <div class="lg:col-span-2">
-          <div class="hero rounded-xl lg:h-[450px] place-items-start " style="background-image: url(Images/4.png);">
+          <div class="hero rounded-xl lg:h-[500px] place-items-start " style="background-image: url(Images/4.png);">
             <div class="hero-overlay bg-opacity-50 rounded-xl"></div>
             <div class="hero-content text-center text-neutral-content ">
               <div
                 class="text-left pt-4 lg:pt-44 px-2 lg:px-10 space-y-2 lg:space-y-5 pb-4 lg:pb-12 max-w-[520px] text-white">
                 <h1 class="lg:mb-5 text-xl lg:text-3xl font-bold ">Professional Program</h1>
-                <p class="lg:mb-5 lg:text-base text-sm">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit
-                  enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et
-                  in.</p>
+                <p class="lg:mb-5 lg:text-base text-sm">Enroll in our professional program for expert skills and career advancement in a specialized field.</p>
                 <button
                   class="btn btn-sm lg:btn-md bg-primary-color border-none text-white lg:text-xl font-bold">Register
                   Now!</button>
@@ -244,8 +235,7 @@
       <div class="lg:pb-24 pb-4">
         <div class="text-center space-y-2 lg:space-y-6">
           <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Our New Products</h1>
-          <p class="max-w-[607px] mx-auto text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing
-            aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="max-w-[607px] mx-auto text-sm lg:text-base">Introducing innovative products, designed for your needs, delivering quality and style. Elevate your experience today! </p>
         </div>
         <div class="divider my-4 lg:my-12 "></div>
         <!-- card  -->
@@ -264,7 +254,7 @@
                 <p class="mr-2">200</p>
               </div>
               <h1 class="font-extrabold text-xl">World Cup Flags Football</h1>
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+              <p>World Cup flags flutter as teams clash in a global . </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
                 <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
@@ -286,7 +276,7 @@
                 <p class="mr-2">200</p>
               </div>
               <h1 class="font-extrabold text-xl">World Cup Flags Football</h1>
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+              <p>flags flutter as nations unite in thrilling football rivalry and camaraderie. </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
                 <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
@@ -308,7 +298,7 @@
                 <p class="mr-2">200</p>
               </div>
               <h1 class="font-extrabold text-xl">World Cup Flags Football</h1>
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+              <p>Yo, gotta snag a sick cap for hockeys. </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
                 <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
@@ -330,7 +320,7 @@
                 <p class="mr-2">200</p>
               </div>
               <h1 class="font-extrabold text-xl">World Cup Flags Football</h1>
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+              <p>World Cup flags flutter as intense  global fans with skill and passion. </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
                 <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
@@ -352,7 +342,7 @@
                 <p class="mr-2">200</p>
               </div>
               <h1 class="font-extrabold text-xl">World Cup Flags Football</h1>
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+              <p>uniting nations in the universal language of football passion and pride. </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
                 <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
@@ -374,7 +364,7 @@
                 <p class="mr-2">200</p>
               </div>
               <h1 class="font-extrabold text-xl">World Cup Flags Football</h1>
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+              <p>Flags wave as nations clash in the World Cup. </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
                 <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
@@ -391,8 +381,7 @@
     <section>
       <div class="text-center space-y-2 lg:space-y-6">
         <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Clients Question</h1>
-        <p class="max-w-[607px] mx-auto text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing
-          aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        <p class="max-w-[607px] mx-auto text-sm lg:text-base">Clients question, pivotal for understanding needs, shaping solutions, and fostering effective communication and collaboration. </p>
       </div>
       <div class="divider my-4 lg:my-12 "></div>
       <!-- accordion section -->
@@ -407,7 +396,7 @@
               Our Equipment
             </div>
             <div class="collapse-content  text-sm">
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              <p>"Our equipment, finely tuned and reliable, empowers us to conquer challenges and achieve excellence seamlessly."</p>
             </div>
           </div>
           <hr>
@@ -417,7 +406,7 @@
               Hockey Training
             </div>
             <div class="collapse-content text-sm">
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              <p>Enhance skills, speed, and strength with dedicated hockey training, mastering the ice with precision and power.</p>
             </div>
           </div>
           <hr>
@@ -427,7 +416,7 @@
               Private Lessons
             </div>
             <div class="collapse-content text-sm">
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              <p>"Private lessons: personalized guidance for accelerated learning and skill mastery."</p>
             </div>
           </div>
           <hr>
@@ -437,7 +426,7 @@
               Ski Touring
             </div>
             <div class="collapse-content text-sm">
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              <p>"Ski touring: gliding through pristine snowscapes, a thrilling journey of discovery in winter's silent embrace."</p>
             </div>
           </div>
           <hr>
@@ -447,7 +436,7 @@
               Booking
             </div>
             <div class="collapse-content text-sm">
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              <p>"Secure your spot now, booking available. Don't miss out on the experience of a lifetime!"</p>
             </div>
           </div>
           <hr>
@@ -457,7 +446,7 @@
               Pricings
             </div>
             <div class="collapse-content text-sm">
-              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              <p>"Pricings vary based on factors such as features, quantity, and customization options."</p>
             </div>
           </div>
         </div>
@@ -468,8 +457,7 @@
     <section>
       <div class="text-center space-y-2 lg:space-y-6">
         <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Get In Touch</h1>
-        <p class="max-w-[607px] mx-auto text-sm lg:text-base">Dit amet consectetur. Condimentum dignissim adipiscing
-          aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        <p class="max-w-[607px] mx-auto text-sm lg:text-base">For connection and collaboration, don't hesitate—reach out and let's make things happen together!</p>
       </div>
       <div class="divider my-4 lg:my-12 "></div>
       <!-- contact section -->
@@ -526,7 +514,7 @@
       </div>
     </section>
     <!-- Social Media  -->
-    <section class="flex flex-col items-center mb-24 space-y-6 bg-[#f8f8f8] p-9 rounded-xl m-3">
+    <section class="flex flex-col items-center mb-12 lg:mb-24 space-y-6 bg-[#f8f8f8] p-9 rounded-xl m-3">
       <h1 class="text-2xl font-extrabold">Social Media</h1>
       <div class="flex gap-4 ">
         <i class="fa-brands fa-twitter text-3xl"></i>
@@ -541,8 +529,7 @@
     <div class="py-10 lg:py-24  container mx-auto grid grid-cols-2 lg:grid-cols-5 gap-10 justify-between">
       <div class=" col-span-2 mx-auto lg:mx-0 space-y-4 max-w-[346px] flex flex-col items-center lg:items-start">
         <h1 class="text-xl lg:text-3xl font-bold lg:font-extrabold ">Get In Touch</h1>
-        <p class="opacity-60 mb-7 text-center lg:text-left">Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat dolor. Purus urna
-          in sit nullam proin. </p>
+        <p class="opacity-60 mb-7 text-center lg:text-left">Feel free to reach out! Your thoughts matter, and we're here to connect with you. </p>
         <div class=" flex gap-3">
           <img src="Images/Frame (3).png" alt="">
           <p class="opacity-60">hockeys@support.com</p>
