fix some responsive problems

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="navbar p-0">
         <div class="navbar-start">
           <div class="dropdown">
-            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <div tabindex="0" role="button" class="btn btn-ghost   lg:hidden">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                 stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
@@ -68,7 +68,7 @@
             </ul>
           </div>
           <div class="flex">
-            <a class="btn btn-ghost md:text-4xl pl-0 text-2xl font-extrabold">Hockey<span
+            <a class="btn btn-ghost md:text-4xl pl-0 text-2xl font-extrabold ">Hockey<span
                 class="text-primary-color">’</span>s</a>
           </div>
         </div>
@@ -83,7 +83,7 @@
         </div>
         <div class="navbar-end flex gap-6">
           <i class="hidden lg:block fa-solid fa-magnifying-glass text-slate-400"></i>
-          <a class="btn btn-sm lg:btn-lg btn-md bg-primary-color text-white md:font-semibold">Get Ticket</a>
+          <a class="btn btn-sm lg:btn-lg btn-md bg-primary-color text-white md:font-semibold hover:bg-sky-700">Get Ticket</a>
         </div>
       </div>
     </nav>
@@ -92,7 +92,7 @@
   <main class="container mx-auto">
     <!-- carousel section -->
     <section class="mb-8 lg:my-10 relative ">
-      <div class="carousel relative w-full lg:h-[650px] ">
+      <div class="carousel relative w-full lg:h-[600px] ">
         <div id="slide1" class="carousel-item relative w-full ">
           <img src="Images/1.png" class="w-full" />
           <div class="absolute flex gap-4 bottom-5 left-5">
@@ -139,7 +139,7 @@
       </div>
       <div class="divider my-4 lg:my-12 "></div>
       <!-- card section -->
-      <div class=" lg:flex justify-between px-8 lg:px-16">
+      <div class=" lg:flex justify-between px-8 lg:px-12">
         <div class="card">
           <div class="radial-progress mx-auto h-28 w-28 text-red-600" style="--value:87;--thickness: 12px;"
             role="progressbar">87%</div>
@@ -185,35 +185,35 @@
       <!-- program card -->
       <div class="grid grid-cols-1 lg:grid-cols-2 lg:gap-6 gap-3">
         <div class="">
-          <div class="hero rounded-xl" style="background-image: url(Images/2.png);">
-            <div class="hero-overlay bg-opacity-50 rounded-xl"></div>
-            <div class="hero-content text-center text-neutral-content ">
+          <div class="hero rounded-xl hover:opacity-80" style="background-image: url(Images/2.png);">
+            <div class="hero-overlay  bg-opacity-50 rounded-xl"></div>
+            <div class="hero-content  text-center text-neutral-content ">
               <div class="text-left pt-4 lg:pt-24 px-2 lg:px-10 space-y-5 lg:pb-12 text-white">
                 <h1 class="mb-5 text-xl lg:text-3xl font-bold">Junior Program</h1>
                 <p class="mb-5 text-sm lg:text-base">Developing coding skills? Join our junior program for a fun, interactive introduction to programming concepts.</p>
                 <button
-                  class="btn lg:btn-md btn-sm bg-primary-color border-none text-white  lg:text-xl font-bold">Register
+                  class="btn lg:btn-md btn-sm bg-primary-color border-none text-white  lg:text-xl font-bold hover:bg-sky-700">Register
                   Now</button>
               </div>
             </div>
           </div>
         </div>
         <div class="">
-          <div class="hero rounded-xl" style="background-image: url(Images/3.png);">
+          <div class="hero rounded-xl hover:opacity-80" style="background-image: url(Images/3.png);">
             <div class="hero-overlay bg-opacity-50 rounded-xl"></div>
             <div class="hero-content text-center text-neutral-content ">
               <div class="text-left pt-4 lg:pt-24 px-2 lg:px-10 space-y-5 lg:pb-12 text-white">
                 <h1 class="mb-5 text-xl lg:text-3xl font-bold">Teenager Program</h1>
                 <p class="mb-5 text-sm lg:text-base">Creating a dynamic teen program that fosters growth, connection, and learning for adolescents is essential.</p>
                 <button
-                  class="btn lg:btn-md btn-sm bg-primary-color border-none text-white  lg:text-xl font-bold">Register
+                  class="btn lg:btn-md btn-sm bg-primary-color border-none text-white  lg:text-xl font-bold hover:bg-sky-700">Register
                   Now</button>
               </div>
             </div>
           </div>
         </div>
         <div class="lg:col-span-2">
-          <div class="hero rounded-xl lg:h-[500px] place-items-start " style="background-image: url(Images/4.png);">
+          <div class="hero rounded-xl lg:h-[500px] place-items-start hover:opacity-80" style="background-image: url(Images/4.png);">
             <div class="hero-overlay bg-opacity-50 rounded-xl"></div>
             <div class="hero-content text-center text-neutral-content ">
               <div
@@ -221,7 +221,7 @@
                 <h1 class="lg:mb-5 text-xl lg:text-3xl font-bold ">Professional Program</h1>
                 <p class="lg:mb-5 lg:text-base text-sm">Enroll in our professional program for expert skills and career advancement in a specialized field.</p>
                 <button
-                  class="btn btn-sm lg:btn-md bg-primary-color border-none text-white lg:text-xl font-bold">Register
+                  class="btn btn-sm lg:btn-md bg-primary-color border-none text-white lg:text-xl font-bold hover:bg-sky-700">Register
                   Now!</button>
               </div>
 
@@ -240,7 +240,7 @@
         <div class="divider my-4 lg:my-12 "></div>
         <!-- card  -->
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
-          <div class="lg:flex gap-5  border-2 rounded-lg p-5">
+          <div class="lg:flex gap-5  border-2 rounded-lg p-5 hover:bg-sky-100 ">
             <div class="flex justify-center ">
               <img class="w-full" src="Images/5.png" alt="">
             </div>
@@ -262,7 +262,7 @@
               </div>
             </div>
           </div>
-          <div class="lg:flex gap-5  border-2 rounded-lg p-5">
+          <div class="lg:flex gap-5  border-2 rounded-lg p-5 hover:bg-sky-100 ">
             <div class="flex justify-center ">
               <img class="w-full" src="Images/6.png" alt="">
             </div>
@@ -276,7 +276,7 @@
                 <p class="mr-2">200</p>
               </div>
               <h1 class="font-extrabold text-xl">World Cup Flags Football</h1>
-              <p>flags flutter as nations unite in thrilling football rivalry and camaraderie. </p>
+              <p>flags flutter as nations unite in thrilling football . </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
                 <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
@@ -284,7 +284,7 @@
               </div>
             </div>
           </div>
-          <div class="lg:flex gap-5  border-2 rounded-lg p-5">
+          <div class="lg:flex gap-5  border-2 rounded-lg p-5 hover:bg-sky-100">
             <div class="flex justify-center ">
               <img class="w-full" src="Images/7.png" alt="">
             </div>
@@ -306,7 +306,7 @@
               </div>
             </div>
           </div>
-          <div class="lg:flex gap-5  border-2 rounded-lg p-5">
+          <div class="lg:flex gap-5  border-2 rounded-lg p-5 hover:bg-sky-100">
             <div class="flex justify-center ">
               <img class="w-full" src="Images/8.png" alt="">
             </div>
@@ -320,7 +320,7 @@
                 <p class="mr-2">200</p>
               </div>
               <h1 class="font-extrabold text-xl">World Cup Flags Football</h1>
-              <p>World Cup flags flutter as intense  global fans with skill and passion. </p>
+              <p>World Cup flags flutter as intense  global fans . </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
                 <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
@@ -328,7 +328,7 @@
               </div>
             </div>
           </div>
-          <div class="lg:flex gap-5  border-2 rounded-lg p-5">
+          <div class="lg:flex gap-5  border-2 rounded-lg p-5 hover:bg-sky-100">
             <div class="flex justify-center ">
               <img class="w-full" src="Images/9.png" alt="">
             </div>
@@ -342,7 +342,7 @@
                 <p class="mr-2">200</p>
               </div>
               <h1 class="font-extrabold text-xl">World Cup Flags Football</h1>
-              <p>uniting nations in the universal language of football passion and pride. </p>
+              <p>uniting nations in the universal language of football . </p>
               <div class="lg:flex gap-5">
                 <p class="text-primary-color font-extrabold text-lg">Price - $22.00</p>
                 <div class="text-sm"><img src="Images/Frame (1).svg" class="inline-block" alt=""> Delivery Fee : Free
@@ -350,7 +350,7 @@
               </div>
             </div>
           </div>
-          <div class="lg:flex gap-5  border-2 rounded-lg p-5">
+          <div class="lg:flex gap-5  border-2 rounded-lg p-5 hover:bg-sky-100">
             <div class="flex justify-center ">
               <img class="w-full" src="Images/10.png" alt="">
             </div>
@@ -387,7 +387,7 @@
       <!-- accordion section -->
       <div class="lg:flex gap-10 border-2 rounded-lg lg:mb-24 mb-4 lg:p-10 p-6">
         <div class="my-auto">
-          <img src="Images/11.png" class="w-full flex-1" alt="">
+          <img src="Images/11.png" class="hover:opacity-70 w-full flex-1" alt="">
         </div>
         <div class="flex-1 space-y-2">
           <div class="collapse collapse-plus ">
@@ -455,25 +455,25 @@
     <div class="divider my-4 lg:my-12 "></div>
     <!-- Get In Touch -->
     <section>
-      <div class="text-center space-y-2 lg:space-y-6">
+      <div class="text-center space-y-2 lg:space-y-6 ">
         <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Get In Touch</h1>
         <p class="max-w-[607px] mx-auto text-sm lg:text-base">For connection and collaboration, don't hesitate—reach out and let's make things happen together!</p>
       </div>
       <div class="divider my-4 lg:my-12 "></div>
       <!-- contact section -->
-      <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-12 m-4">
-        <div class=" lg:p-12 p-6 p border-2 rounded-xl flex flex-col gap-5">
-          <div class="bg-[#f9fef1] px-8 lg:py-10 py-6 rounded-xl ">
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-12 ">
+        <div class=" lg:p-6 p-6 p border-2 rounded-xl flex flex-col gap-5 justify-between">
+          <div class="bg-[#f9fef1] hover:bg-sky-100 px-2 lg:px-8 lg:py-10 py-6 rounded-xl ">
             <img src="Images/Group 1171275317.png" alt="">
             <p class="mt-8 opacity-70">Phone Number :</p>
             <p class="font-bold text-base lg:text-lg">(+62) 123-321-543</p>
           </div>
-          <div class="bg-[#fffcef] px-8 lg:py-10 py-6 rounded-xl ">
+          <div class="bg-[#fffcef] hover:bg-sky-100 px-2 lg:px-8 lg:py-10 py-6 rounded-xl ">
             <img src="Images/Group 1171275318.png" alt="">
             <p class="mt-8 opacity-70">Email : </p>
             <p class="font-bold text-base lg:text-lg">hockeys@support.com</p>
           </div>
-          <div class="bg-[#f0f6fe] px-8 lg:py-10 py-6 rounded-xl ">
+          <div class="bg-[#f0f6fe] hover:bg-sky-100 px-2 lg:px-8 lg:py-10 py-6 rounded-xl ">
             <img src="Images/Group 1171275321.png" alt="">
             <p class="mt-8 opacity-70">Location : </p>
             <p class="font-bold text-base lg:text-lg">152/1 Mohakhali Wireless Gate</p>
@@ -498,7 +498,7 @@
             </div>
             <div class="">
               <h1 class="text-lg font-bold pb-2">Phone Number</h1>
-              <input type="text" placeholder="EntEnter your phone number"
+              <input type="text" placeholder="Enter your phone number"
                 class="placeholder:opacity-50 input input-ghost w-full lg:py-7  bg-[#f8f8f8]" />
             </div>
           </div>
@@ -507,26 +507,26 @@
               <h1 class="text-lg font-bold pb-2">Message</h1>
               <textarea placeholder="Write your message"
                 class="placeholder:opacity-50 textarea textarea-bordered textarea-lg w-full h-[200px] lg:h-[430px]"></textarea>
-              <button class="btn w-full bg-primary-color btn-md lg:btn-lg text-white">Send Message</button>
+              <button class="btn w-full bg-primary-color btn-md lg:btn-lg text-white hover:bg-sky-700">Send Message</button>
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- Social Media  -->
-    <section class="flex flex-col items-center mb-12 lg:mb-24 space-y-6 bg-[#f8f8f8] p-9 rounded-xl m-3">
+    <section class="flex flex-col items-center mb-12 lg:mb-24 space-y-6 bg-[#f8f8f8] p-9 rounded-xl m-3 ">
       <h1 class="text-2xl font-extrabold">Social Media</h1>
       <div class="flex gap-4 ">
-        <i class="fa-brands fa-twitter text-3xl"></i>
-        <i class="fa-brands fa-facebook text-3xl"></i>
-        <i class="fa-brands fa-instagram text-3xl"></i>
-        <i class="fa-brands fa-github text-3xl"></i>
+        <i class="fa-brands fa-twitter text-3xl hover:relative bottom-3"></i>
+        <i class="fa-brands fa-facebook text-3xl hover:relative bottom-3"></i>
+        <i class="fa-brands fa-instagram text-3xl hover:relative bottom-3"></i>
+        <i class="fa-brands fa-github text-3xl hover:relative bottom-3"></i>
       </div>
     </section>
   </main>
 
   <footer class=" bg-black text-white">
-    <div class="py-10 lg:py-24  container mx-auto grid grid-cols-2 lg:grid-cols-5 gap-10 justify-between">
+    <div class="py-10 container mx-auto grid grid-cols-2 lg:grid-cols-5 gap-10 justify-between">
       <div class=" col-span-2 mx-auto lg:mx-0 space-y-4 max-w-[346px] flex flex-col items-center lg:items-start">
         <h1 class="text-xl lg:text-3xl font-bold lg:font-extrabold ">Get In Touch</h1>
         <p class="opacity-60 mb-7 text-center lg:text-left">Feel free to reach out! Your thoughts matter, and we're here to connect with you. </p>
@@ -536,7 +536,7 @@
         </div>
         <div class="flex gap-3">
           <img src="Images/Frame (4).png" alt="">
-          <p class="opacity-60">(+62) 123-321-543</p>
+          <p class="opacity-60 text-base">(+62) 123-321-543</p>
         </div>
       </div>
       <div class="max-w-[110px] mx-auto lg:mx-0 flex flex-col gap-3 items-center lg:items-start">
