change message box bg color

--- a/index.html
+++ b/index.html
@@ -506,8 +506,8 @@
             <div class="">
               <h1 class="text-lg font-bold pb-2">Message</h1>
               <textarea placeholder="Write your message"
-                class="placeholder:opacity-50 textarea textarea-bordered textarea-lg w-full h-[200px] lg:h-[430px]"></textarea>
-              <button class="btn w-full bg-primary-color btn-md lg:btn-lg text-white hover:bg-sky-700">Send Message</button>
+                class="placeholder:opacity-50 textarea textarea-bordered textarea-lg w-full h-[200px] lg:h-[430px] bg-[#f8f8f8] border-none"></textarea>
+              <button class="btn w-full bg-primary-color btn-md lg:btn-lg text-white  hover:bg-sky-700">Send Message</button>
             </div>
           </div>
         </div>
