--- a/index.html
+++ b/index.html
@@ -95,30 +95,30 @@
       <div class="carousel relative w-full lg:h-[600px] ">
         <div id="slide1" class="carousel-item relative w-full ">
           <img src="Images/1.png" class="w-full" />
-          <div class="absolute flex gap-4 bottom-5 left-5">
-            <a href="#slide4" class="btn btn-circle text-white bg-black border-none">❮</a>
-            <a href="#slide2" class="btn btn-circle text-white bg-black border-none">❯</a>
+          <div class="absolute space-x-5 bottom-5 left-5">
+            <a href="#slide4" class="btn btn-circle text-white border-none bg-primary-color">❮</a>
+            <a href="#slide2" class="btn btn-circle text-white border-none bg-primary-color">❯</a>
           </div>
         </div>
         <div id="slide2" class="carousel-item relative w-full">
           <img src="Images/2.png" class="w-full" />
-          <div class="absolute flex gap-4 bottom-5 left-5">
-            <a href="#slide1" class="btn btn-circle text-white bg-black border-none">❮</a>
-            <a href="#slide3" class="btn btn-circle text-white bg-black border-none">❯</a>
+          <div class="absolute space-x-5 bottom-5 left-5">
+            <a href="#slide1" class="btn btn-circle text-white border-none bg-primary-color">❮</a>
+            <a href="#slide3" class="btn btn-circle text-white border-none bg-primary-color">❯</a>
           </div>
         </div>
         <div id="slide3" class="carousel-item relative w-full">
           <img src="Images/3.png" class="w-full" />
-          <div class="absolute flex gap-4 bottom-5 left-5">
-            <a href="#slide2" class="btn btn-circle text-white bg-black border-none">❮</a>
-            <a href="#slide4" class="btn btn-circle text-white bg-black border-none">❯</a>
+          <div class="absolute space-x-5 bottom-5 left-5">
+            <a href="#slide2" class="btn btn-circle text-white border-none bg-primary-color">❮</a>
+            <a href="#slide4" class="btn btn-circle text-white border-none bg-primary-color">❯</a>
           </div>
         </div>
         <div id="slide4" class="carousel-item relative w-full">
           <img src="Images/4.png" class="w-full" />
-          <div class="absolute flex gap-4 bottom-5 left-5">
-            <a href="#slide3" class="btn btn-circle text-white bg-black border-none">❮</a>
-            <a href="#slide1" class="btn btn-circle text-white bg-black border-none">❯</a>
+          <div class="absolute space-x-5 bottom-5 left-5">
+            <a href="#slide3" class="btn btn-circle text-white border-none bg-primary-color">❮</a>
+            <a href="#slide1" class="btn btn-circle text-white border-none bg-primary-color">❯</a>
           </div>
         </div>
 
@@ -130,14 +130,14 @@
       </div>
 
     </section>
-    <div class="divider"></div>
+    <div class="border-t-2 border-dotted my-4 lg:my-12"></div>
     <!-- Professional Hockeys Club -->
     <section>
       <div class="text-center space-y-2 lg:space-y-6">
         <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Professional Hockeys Club</h1>
         <p class="max-w-[607px] mx-auto text-sm lg:text-base">The professional hockey club displayed unparalleled teamwork, securing victory with skill and determination on the ice.</p>
       </div>
-      <div class="divider my-4 lg:my-12 "></div>
+      <div class="border-t-2 border-dotted my-4 lg:my-12 "></div>
       <!-- card section -->
       <div class=" lg:flex justify-between px-8 lg:px-12">
         <div class="card">
@@ -174,14 +174,14 @@
         </div>
       </div>
     </section>
-    <div class="divider my-4 lg:my-12 "></div>
+    <div class="border-t-2 border-dotted my-4 lg:my-12 "></div>
     <!-- Program Sections -->
     <section class="my:4 lg:my-24">
       <div class="text-center space-y-2 lg:space-y-6">
         <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Program Sections</h1>
         <p class="max-w-[607px] mx-auto text-sm lg:text-base">Divide code into sections for clarity, enhancing readability and easing maintenance. </p>
       </div>
-      <div class="divider my-4 lg:my-12 "></div>
+      <div class="border-t-2 border-dotted my-4 lg:my-12 "></div>
       <!-- program card -->
       <div class="grid grid-cols-1 lg:grid-cols-2 lg:gap-6 gap-3">
         <div class="">
@@ -229,7 +229,7 @@
           </div>
         </div>
     </section>
-    <div class="divider my-4 lg:my-12 "></div>
+    <div class="border-t-2 border-dotted my-4 lg:my-12 "></div>
     <!-- Our New Products -->
     <section>
       <div class="lg:pb-24 pb-4">
@@ -237,7 +237,7 @@
           <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Our New Products</h1>
           <p class="max-w-[607px] mx-auto text-sm lg:text-base">Introducing innovative products, designed for your needs, delivering quality and style. Elevate your experience today! </p>
         </div>
-        <div class="divider my-4 lg:my-12 "></div>
+        <div class="border-t-2 border-dotted my-4 lg:my-12 "></div>
         <!-- card  -->
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
           <div class="lg:flex gap-5  border-2 rounded-lg p-5 hover:bg-sky-100 ">
@@ -377,13 +377,13 @@
       </div>
     </section>
     <!-- Clients Question -->
-    <div class="divider my-4 lg:my-12 "></div>
+    <div class="border-t-2 border-dotted my-4 lg:my-12 "></div>
     <section>
       <div class="text-center space-y-2 lg:space-y-6">
         <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Clients Question</h1>
         <p class="max-w-[607px] mx-auto text-sm lg:text-base">Clients question, pivotal for understanding needs, shaping solutions, and fostering effective communication and collaboration. </p>
       </div>
-      <div class="divider my-4 lg:my-12 "></div>
+      <div class="border-t-2 border-dotted my-4 lg:my-12 "></div>
       <!-- accordion section -->
       <div class="lg:flex gap-10 border-2 rounded-lg lg:mb-24 mb-4 lg:p-10 p-6">
         <div class="my-auto">
@@ -398,8 +398,9 @@
             <div class="collapse-content  text-sm">
               <p>"Our equipment, finely tuned and reliable, empowers us to conquer challenges and achieve excellence seamlessly."</p>
             </div>
+            <hr>
           </div>
-          <hr>
+          
           <div class="collapse collapse-plus ">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
@@ -408,8 +409,9 @@
             <div class="collapse-content text-sm">
               <p>Enhance skills, speed, and strength with dedicated hockey training, mastering the ice with precision and power.</p>
             </div>
+            <hr>
           </div>
-          <hr>
+          
           <div class="collapse collapse-plus ">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title text-lg font-semibold lg:text-xl lg:font-bold">
@@ -452,14 +454,14 @@
         </div>
       </div>
     </section>
-    <div class="divider my-4 lg:my-12 "></div>
+    <div class="border-t-2 border-dotted my-4 lg:my-12 "></div>
     <!-- Get In Touch -->
     <section>
       <div class="text-center space-y-2 lg:space-y-6 ">
         <h1 class="text-2xl lg:text-4xl font-bold lg:font-extrabold ">Get In Touch</h1>
         <p class="max-w-[607px] mx-auto text-sm lg:text-base">For connection and collaboration, don't hesitate—reach out and let's make things happen together!</p>
       </div>
-      <div class="divider my-4 lg:my-12 "></div>
+      <div class="border-t-2 border-dotted my-4 lg:my-12 "></div>
       <!-- contact section -->
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-12 ">
         <div class=" lg:p-6 p-6 p border-2 rounded-xl flex flex-col gap-5 justify-between">
